<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@drawable/dark_gray_texture"
    android:orientation="vertical"
    android:padding="15dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_area"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/title_activity_settings"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/sound_effects_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:checked="true"
            android:onClick="soundEffectsSwitchClick"
            android:text="@string/sound_effects"
            android:textColor="@color/black" />

        <Switch
            android:id="@+id/tap_sound_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checked="true"
            android:onClick="tapSoundSwitchClick"
            android:text="Tap sounds"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/tap_sound_desc"
            android:textColor="@color/lightGray" />

        <Button
            android:id="@+id/connect_buzz_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button"
            android:onClick="connectBuzzButtonClick"
            android:text="@string/connect_neosensory_buzz"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:contextClickable="true"
            android:linksClickable="true"
            android:text="@string/neosensory_setting_description"
            android:textColor="@color/lightGray" />

        <Switch
            android:id="@+id/phone_vibration_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:onClick="phoneVibrationSwitchClick"
            android:text="Phone vibration"
            android:textColor="@color/black"
            tools:checked="true" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:contextClickable="true"
            android:linksClickable="true"
            android:text="@string/phone_vibration_desc"
            android:textColor="@color/lightGray" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="If you would like to start over with your progress, you can reset it"
            android:textColor="@color/lightGray" />

        <Button
            android:id="@+id/reset_progress_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:onClick="resetProgressClick"
            android:text="@string/reset_progress"
            android:textColor="@color/white" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>